[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-rebuilder"
version = "0.1.0"
description = "A tool to create shell scripts that rebuild image files from extracted files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mmh3>=4.0.0",
]

[project.scripts]
image-rebuilder = "image_rebuilder:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
py-modules = ["image_rebuilder"]
