[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-reconstructor-generator"
version = "0.1.0"
description = "A tool to create shell scripts that reconstruct image files from extracted files"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
dependencies = [
    "mmh3>=4.0.0",
]

[project.scripts]
image-reconstructor-generator = "image_reconstructor_generator:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
py-modules = ["image_reconstructor_generator"]
